--- a/releases.json
+++ b/releases.json
@@ -4,6 +4,14 @@
 [
 
     {
+        "version": "0.1.2",
+        "date": "2016-09-12T12:20:36+11:00",
+        "downloadUrl": "https://github.com/bossanova808/CommerceMailer/archive/v0.1.1.zip",
+        "notes": [
+            "[Fixed] Better detection of localised code",
+        ]
+    },
+    {
         "version": "0.1.1",
         "date": "2016-09-07T12:20:36+11:00",
         "downloadUrl": "https://github.com/bossanova808/CommerceMailer/archive/v0.1.1.zip",
