--- a/releases.json
+++ b/releases.json
@@ -2,11 +2,18 @@
 // $time = new DateTime; echo $time->format(DateTime::ATOM);
 
 [
-
+    {
+        "version": "0.1.3",
+        "date": "2016-12-24T12:20:36+11:00",
+        "downloadUrl": "https://github.com/bossanova808/CommerceMailer/archive/v0.1.3.zip",
+        "notes": [
+            "[Fixed] Better detection of localised code",
+        ]
+    },
     {
         "version": "0.1.2",
         "date": "2016-09-12T12:20:36+11:00",
-        "downloadUrl": "https://github.com/bossanova808/CommerceMailer/archive/v0.1.1.zip",
+        "downloadUrl": "https://github.com/bossanova808/CommerceMailer/archive/v0.1.2.zip",
         "notes": [
             "[Fixed] Better detection of localised code",
         ]
